Fix overlap - shrink logo until desktop

--- a/src/components/logo.module.css
+++ b/src/components/logo.module.css
@@ -34,7 +34,7 @@
     
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1512px) {
     .logoGraphic {
         width: 178px;
     }
